--- a/views/add.ejs
+++ b/views/add.ejs
@@ -10,7 +10,7 @@
     <form action="/add" method="POST">
         <input type="text" name="item-name" placeholder="Item's name"> <br>
         <input type="text" name="loc" placeholder="Location of the item"> <br>
-        <button type="submit">Sumbit</button>
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
