--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,10 +11,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- My own Style -->
+    <link rel="stylesheet" href="css/index.css">
+
 </head>
 
 <body>
     <div class="container">
+        <form action="">
+            <label for="searchbar">Search Items</label>
+            <input type="search" name="searchbar">
+        </form>
+      
         <div class="row" id="list">
         
             <% items.forEach( (it)=> { %>
@@ -34,6 +42,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
+    <script src="js/index.js"></script>
 </body>
 
 </html>
