--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add new item</title>
-</head>
-<body>
+<%- include("templates/header.ejs") %>
+<%- include("partials/navbar.ejs") %>
     <form action="/add" method="POST">
         <input type="text" name="item-name" placeholder="Item's name"> <br>
         <input type="text" name="loc" placeholder="Location of the item"> <br>
         <button type="submit">Submit</button>
     </form>
-</body>
-</html>
+<%- include("templates/footer.ejs") %>
