--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventory</title>
-
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <!-- My own Style -->
-    <link rel="stylesheet" href="css/index.css">
-
-</head>
-
-<body>
+<%- include("templates/header.ejs") %>
+<%- include("partials/navbar.ejs") %>
     <div class="container">
         <form action="">
             <label for="searchbar">Search Items</label>
@@ -44,6 +27,5 @@
         crossorigin="anonymous"></script>
 
     <script src="js/index.js"></script>
-</body>
 
-</html>
+<%- include("templates/footer.ejs") %>
