--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,6 +7,12 @@
         <li class="nav-item">
           <a class="nav-link" href="/add">Add</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/register">Register</a>
+        </li>
       </ul>
     </div>
   </nav>
