--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,4 +5,17 @@
 <p class="lead mb-3">Welcome <%= user.name %></p>
 <a href="/users/logout" class="btn btn-secondary">Logout</a>
 
+<div class="row" id="list">
+        
+    <% user.invts.forEach( (it)=> { %>
+        <a href="/dashboard/invt/<%= it.id %>">
+            <div class="col-4 card">
+                <div class="card-body">
+                    <div class="card-title"> <%= it.name %> </div>
+                </div>
+            </div>
+        </a>
+    <% }); %>
+</div>
+
 <%- include("templates/footer.ejs") %>
