--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css">
 
     <!-- My own Style -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
 
     <script src="https://kit.fontawesome.com/32571a15a1.js" crossorigin="anonymous"></script>
 </head>
