Add create new inventory and add new item function

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,6 +17,7 @@
               class="form-control"
               placeholder="Enter Name"
               value="<%= typeof name != 'undefined' ? name : '' %>"
+              required
             />
           </div>
           <div class="form-group">
@@ -28,6 +29,7 @@
               class="form-control"
               placeholder="Enter Email"
               value="<%= typeof email != 'undefined' ? email : '' %>"
+              required
             />
           </div>
           <div class="form-group">
@@ -39,6 +41,7 @@
               class="form-control"
               placeholder="Create Password"
               value="<%= typeof password != 'undefined' ? password : '' %>"
+              required
             />
           </div>
           <div class="form-group">
@@ -50,6 +53,7 @@
               class="form-control"
               placeholder="Confirm Password"
               value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
+              required
             />
           </div>
           <button type="submit" class="btn btn-primary btn-block">
