--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,10 @@
 <%- include("templates/header.ejs") %>
 <%- include("partials/navbar.ejs") %>
+
+<% if (messages.error) {%>
+  <%= messages.error %>
+<% } %>
+
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
       <div class="card card-body">
@@ -13,6 +18,7 @@
               name="email"
               class="form-control"
               placeholder="Enter Email"
+              required
             />
           </div>
           <div class="form-group">
@@ -23,6 +29,7 @@
               name="password"
               class="form-control"
               placeholder="Enter Password"
+              required
             />
           </div>
           <button type="submit" class="btn btn-primary btn-block">Login</button>
