--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,7 +5,7 @@
           <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/add">Add</a>
+          <a class="nav-link" href="/dashboard">Dashboard</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/users/login">Login</a>
